Updated version with swagger - with working stuff

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.username=root
 # create - usuwa baze i tworzy now?
 # create-drop - stworzenie bazy, na koniec wyczyszczenie
 spring.jpa.hibernate.ddl-auto=update
+#logging.level.root=TRACE
